<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_layout_rect"
    tools:context=".main.questmap.SubmitQuestResponseDialogFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/card_layout_rect">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/card_layout_rect"
            android:backgroundTint="@color/col_bg_light"
            android:fontFamily="@font/changa_medium"
            android:textAlignment="center"
            android:textColor="@color/col_text_primary"
            android:textSize="18sp"
            android:text="@string/dialog_start_quest" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.CustomOutlineButton"
            android:layout_marginBottom="2dp"
            android:layout_below="@id/tv_user_confirmation"
            android:background="@drawable/card_layout_rect"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            app:cornerRadius="2dp"
            app:backgroundTint="@color/col_bg_light"
            android:text="@string/action_start_quest"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/design_default_color_error"
            app:strokeWidth="2dp"
            android:layout_below="@id/tv_user_confirmation"
            android:background="@color/color_accent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:text="@string/action_cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_time_up_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/color_accent"
            app:strokeWidth="2dp"
            android:visibility="gone"
            android:layout_below="@id/tv_user_confirmation"
            android:background="@color/color_secondary"
            android:layout_centerInParent="true"
            android:layout_marginEnd="50dp"
            android:text="@string/action_confirm"/>
    </RelativeLayout>

</RelativeLayout>