<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_primary">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/changa"
        android:text="@string/title_register_add_companions"
        android:textAlignment="center"
        android:textColor="@color/color_secondary"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:contentDescription="@string/action_confirm"
        android:text="@string/action_next_question"
        android:textAlignment="center"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconGravity="end" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_alignTop="@id/rv_companions"
        android:layout_toEndOf="@id/rv_companions"
        android:contentDescription="@string/action_confirm"
        app:srcCompat="@drawable/ic_baseline_add_24"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rv_companions"
        android:layout_below="@id/title_question"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/cv_item_companion"
        tools:orientation="vertical"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
    </androidx.recyclerview.widget.RecyclerView>



</RelativeLayout>